<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    >


<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/nombre"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:layout_gravity="center_horizontal"></TextView>
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="screen" />-->

        <Button
            android:id="@+id/agregarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irAPendientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tareas"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irAlMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irANotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonNotas"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irATiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempol"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irATienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tienda"
            android:layout_gravity="center_horizontal">
        </Button>

        <Button
            android:id="@+id/irAAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center_horizontal">
        </Button>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>