<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarTarea">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agrega una nueva tarea"
        android:layout_gravity="center_horizontal"
        android:includeFontPadding="false"
        android:textSize="20dip">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/nombreTarea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/pista"
        android:inputType="text"
        android:layout_gravity="center_horizontal">
<!--        android:autofillHints=""-->
    </EditText>

     <Button
         android:id="@+id/agregarFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/agregarFecha">

     </Button>

    </LinearLayout>

    <CheckBox
        android:id="@+id/subactividades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subdividir"
        android:layout_gravity="center_horizontal">

    </CheckBox>


    <EditText
        android:id="@+id/tiempoTarea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/tiempo"
        android:inputType="text"
        android:layout_gravity="center_horizontal">
    </EditText>

    <Button
        android:id="@+id/botonAgregarTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listo"
        android:layout_gravity="center_horizontal">

    </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>